dr2/styles.css
details {
    background: white;
    padding: 10px 20px;
    border-radius: 7px;
    margin-top: 20px;
    cursor: pointer;
}

body {
    background-color: aliceblue;
}

.container {
    margin-top: 5vh;
    margin-bottom: 5vh;
}

.hero-text {
    color: black;
}

.hero {
    margin-top: 30vh;
    margin-bottom: 30vh;
}

.about {
    height: 70vh;
    width: 100vw;
}

.know {
    height: 100vh;
    width: 100vw;
}

#footer {
    background-color: black;
    color: white;
    margin-top: 0vh;
    margin-bottom: 0vh;
}

.about-hero {
    max-width: 30vw;
}

p.h1 {
    margin-bottom: 3vh;
}

.hero-img {
    max-width: 20vw;
}

nav {
    background-color: white;
    color: black;
}

.handshake {
    max-width: 25vw;
    max-height: 40vh;
}

.dr-logo {
    max-width: 5vw;
}

.spac {
    display: none;
}

/* @media (max-width: 360px) {
    .team {
        margin-top: 300vw;
    }
} */

@media (min-width: 360px) and (max-width: 480px) {
    .about-hero {
        max-width: 90vw;
    }

    .handshake {
        max-width: 90vw;
    }

    .spac {
        display: block;
    }

    .team {
        margin-top: 50rem;
    }
}

